tags/release-2.1/DesktopEarlabDLL/DesktopEarlabDLL.h


	DESKTOPEARLABDLL_API void *CreateModel			(void);

	DESKTOPEARLABDLL_API void  SetLogCallback   	(void *ModelPtr, LogCallback theCallback);

	DESKTOPEARLABDLL_API int   SetInputDirectory	(void *ModelPtr, char *InputDirectoryPath);

	DESKTOPEARLABDLL_API int   SetOutputDirectory	(void *ModelPtr, char *OutputDirectoryPath);

	DESKTOPEARLABDLL_API int   SetModuleDirectory	(void *ModelPtr, char *ModuleDirectoryPath);

	DESKTOPEARLABDLL_API int   LoadModelConfigFile	(void *ModelPtr, char *ModelConfigFileName, float FrameSize_uS);

	DESKTOPEARLABDLL_API int   LoadModuleParameters	(void *ModelPtr, char *ModuleParameterFileName);

	DESKTOPEARLABDLL_API int   StartModules			(void *ModelPtr);

	DESKTOPEARLABDLL_API int   RunModel				(void *ModelPtr, int NumFrames);

	DESKTOPEARLABDLL_API int   AdvanceModules		(void *ModelPtr);

	DESKTOPEARLABDLL_API int   StopModules			(void *ModelPtr);

	DESKTOPEARLABDLL_API int   UnloadModel			(void *ModelPtr);